[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/fon.png" type="Texture" id=1]
[ext_resource path="res://Research/Research.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 59.5173, 10.7935 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 59.9864, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64.551, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 58.6719, 10 )

[node name="Research" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.33514e-05, -160 )
scale = Vector2( 40, 3.72118 )
texture = ExtResource( 1 )

[node name="tanks" type="Label" parent="."]
margin_left = -278.054
margin_top = -187.47
margin_right = -232.054
margin_bottom = -167.47
text = "tanks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="armored car" type="Label" parent="."]
margin_left = -168.0
margin_top = -184.0
margin_right = -88.0
margin_bottom = -168.0
text = "armored car"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="motorized infantry" type="Label" parent="."]
margin_left = -58.3304
margin_top = -185.26
margin_right = 67.6696
margin_bottom = -169.26
rect_pivot_offset = Vector2( 44.1439, 6.65709 )
text = "motorized infantry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infantry2" type="Label" parent="."]
margin_left = 104.0
margin_top = -184.0
margin_right = 152.0
margin_bottom = -170.0
text = "infantry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aerial" type="Label" parent="."]
margin_left = 232.0
margin_top = -184.0
margin_right = 272.0
margin_bottom = -170.0
text = "aerial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tanks" type="Button" parent="."]
margin_left = -320.0
margin_top = -168.0
margin_right = -200.0
margin_bottom = -130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armored car" type="Button" parent="."]
margin_left = -192.0
margin_top = -168.0
margin_right = -72.0
margin_bottom = -130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Motorized infantry" type="Button" parent="."]
margin_left = -64.0
margin_top = -168.0
margin_right = 66.0
margin_bottom = -130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infantry" type="Button" parent="."]
margin_left = 72.0
margin_top = -168.0
margin_right = 192.0
margin_bottom = -130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aerial2" type="Button" parent="."]
margin_left = 200.0
margin_top = -168.0
margin_right = 320.0
margin_bottom = -130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Sprite" parent="."]

[node name="Label" type="Label" parent="Label"]
margin_left = -72.0
margin_top = -36.0
margin_right = -8.0
margin_bottom = -5.0
text = "bruh
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tank_area" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="tank_area"]
position = Vector2( -260.368, -180.07 )
shape = SubResource( 1 )

[node name="armored car_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="armored car_area"]
position = Vector2( -132.179, -179.466 )
shape = SubResource( 2 )

[node name="motorized infantry_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="motorized infantry_area"]
position = Vector2( 0.275482, -179.604 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 132.021, -179.952 )
shape = SubResource( 4 )
[connection signal="mouse_entered" from="tank_area" to="." method="_on_tank_area_mouse_entered"]
[connection signal="mouse_exited" from="tank_area" to="." method="_on_tank_area_mouse_exited"]
